Bug 334588: Choose font consistently for page headers/footers, and remove localized header font name and size. r+sr=roc.